--- a/src/scss/components/buttons/_styling.scss
+++ b/src/scss/components/buttons/_styling.scss
@@ -4,6 +4,8 @@
     display: inline-block;
     height: $button-spacing-default;
     padding: 0 $button-padding-default;
+    margin: $button-margin-default;
+    font-family: $base-font-family-default;
     font-size: $button-font-size-default;
     font-weight: $base-font-weight-bold;
     line-height: $button-spacing-default;
