--- a/src/scss/helpers/_alignment.scss
+++ b/src/scss/helpers/_alignment.scss
@@ -19,7 +19,7 @@
 }
 
 .main-content {
-	padding-top: 5em;
+	padding: 5em 1em 0;
 }
 
 hr {
