--- a/src/scss/helpers/_constants.scss
+++ b/src/scss/helpers/_constants.scss
@@ -24,3 +24,6 @@ $base-font-weight-bold: 700;
 $base-font-weight-semi-bold: 600;
 $base-font-weight-default: 400;
 $base-font-weight-light: 300;
+
+$base-font-family-heading: 'Fira Sans', sans-serif;
+$base-font-family-default: 'Muli', sans-serif;
